Fixed chips vertical gap being too large - Fixed chips border pseudoelement having a fixed height - Removed filter input padding - Added a small left padding to fitler input in multiple mode

--- a/packages/konponents-next/src/styles/components/KonSelect.css
+++ b/packages/konponents-next/src/styles/components/KonSelect.css
@@ -65,7 +65,7 @@
 		position: relative;
 		display: flex;
 		flex-wrap: wrap;
-		gap: 10px;
+		gap: 2px 10px;
 		/* Text must stay on top of the option menu to prevent getting occluded during the reveal transition */
 		z-index: 2;
 
@@ -109,7 +109,7 @@
 			top: 0;
 			left: 0;
 			width: 100%;
-			height: 26px;
+			height: 100%;
 			top: 50%;
 			transform: translateY(-50%);
 			border-radius: 10px;
@@ -182,7 +182,6 @@
 		background: none;
 		border: none;
 		z-index: 3;
-		padding: 8px 12px;
 		color: rgb(var(--component-foreground));
 		font-size: var(--font-size);
 	}
@@ -192,6 +191,7 @@
 		flex: 1;
 		max-width: 100%;
 		min-width: 80px;
+		padding-left: 4px;
 		transition-property: opacity, transform;
 		transition-duration: 250ms;
 		transition-timing-function: ease;
